2006-01-25 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Add field use_rdct to table sys_dmail.
	* Localize some elements of module configuration.

2006-01-24 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Delete contents of directories mod2 and mod3.
	* Set PHP_version to 4.1.0- in ext_emconf.php.
	* Add partial draft of manual.
	* Remove function sendTheMail from class.dmailer.php.
	* Remove funcions getURL, getExtendedURL, ux_translate_uri, substHTTPurlsInPlainText, substHREFsInHTML, substMediaNamesInHTML, constructHTML from class.dmailer.php.
	* Extension now dependent on TYPO3 4.0 (t3lib_htmlmail).
	* Delete file dmailerd.phpsh, update manual accordingly.
	* Correct linebreaks in dmailerd.phpcron.
	* Fix reference to mysql_fetch_assoc in class.web_mod_dmail.php
	* Revert incorrect change to ext_tables.sql (mid must have backticks on KEY statements).
	* Correction to web_mod_dmail JS: replace document.location with window.location.href

2006-01-23 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Add charset column to sys_dmail table
	* Change default encoding to quoted-printable in TCA
	* Add configuration variables (ext_conf_template.txt and ext_localconf.php)
	* Remove lock to Global (ext_emconf.php)
	* Update to returnmail.phpsh (from sr_direct_mail_ext)
	* Add mod3 directory
	* Add returnmail.phpsh and class.readmail.php to mod3 directory.
	* Update locallang.php file in mod directory (from sr_direct_mail_ext).
	* Update to dmailer.phpcron and class.dmailer.php in mod directory (from sr_direct_mail_ext)
	* Add mod2 directory.
	* Add dmailer.phpsh and class.dmailer.php to mod2 directory.
	* Add files locallang_mod.php and clear.gif in directory mod.
	* Update index.php and conf.php in directory mod.
	* Multiple changes to class.mod_web_dmail.php (from sr_direct_mail_ext).
	* Merge mod2 and mod3 directories into mod directory
	* Get direct mail character set from TS template when based on internal page.
