@@ -165,7 +165,7 @@ CREATE TABLE sys_dmail_group_category_mm (
 
 #
 # Table structure for table 'sys_dmail_feuser_category_mm'
-# 
+#
 #
 CREATE TABLE sys_dmail_feuser_category_mm (
   uid_local int(11) unsigned DEFAULT '0' NOT NULL,
@@ -178,7 +178,7 @@ CREATE TABLE sys_dmail_feuser_category_mm (
 
 #
 # Table structure for table 'sys_dmail_ttaddress_category_mm'
-# 
+#
 #
 CREATE TABLE sys_dmail_ttaddress_category_mm (
   uid_local int(11) unsigned DEFAULT '0' NOT NULL,
@@ -189,10 +189,21 @@ CREATE TABLE sys_dmail_ttaddress_category_mm (
   KEY uid_foreign (uid_foreign)
 );
 
+#
+# Table structure for table 'sys_dmail_ttcontent_category_mm'
+#
+#
+CREATE TABLE sys_dmail_ttcontent_category_mm (
+  uid_local int(11) unsigned DEFAULT '0' NOT NULL,
+  uid_foreign int(11) unsigned DEFAULT '0' NOT NULL,
+  tablenames varchar(30) DEFAULT '' NOT NULL,
+  sorting int(11) unsigned DEFAULT '0' NOT NULL,
+  KEY uid_local (uid_local),
+  KEY uid_foreign (uid_foreign)
+);
 
-
-# THESE create statements will NOT work if this file is piped into MySQL. 
-# Rather they will be detected by the Typo3 Install Tool and through that 
+# THESE create statements will NOT work if this file is piped into MySQL.
+# Rather they will be detected by the Typo3 Install Tool and through that
 # you should upgrade the tables to content these fields.
 
 CREATE TABLE fe_users (
